cell-04: bacteria basic movement by click

--- a/src/styles/project/items/bacteria.scss
+++ b/src/styles/project/items/bacteria.scss
@@ -8,6 +8,7 @@
   border-radius: 50%;
   box-shadow: inset .0rem .0rem .3rem $bacteria-capsule;
   background-color: $white;
+  transition: .5s;
   &:before {
     content: ' ';
     position: absolute;
